--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -24,7 +24,7 @@
     "shopiners_part1": "شوب",
     "shopiners_part2": "ين",
     "shopiners_part3": "رز",
-    "how_it_works": "كيف يعمل؟",
+    "how_it_works": "كيف تسير الأمور؟",
     "how_sell": "كيف تبيع؟",
     "how_buy": "كيف تشتري؟",
     "terms_and_conditions": "الشروط والأحكام",
@@ -126,10 +126,10 @@
   "report_ad": "إبلاغ عن هذا الإعلان",
   "choose_reason": "اختر سببًا",
   "ad_illegal_products": "إعلان لمنتجات محظورة أو غير قانونية",
-  "multiple_ads_same_item": "إعلانات متعددة لنفس العنصر",
+  "multiple_ads_same_item": "إعلانات متعددة لنفس المنتج",
   "other_policy_violations": "انتهاكات أخرى لسياسات الموقع",
   "inappropriate_content": "محتوى غير لائق",
-  "misleading_description": "وصف مضلل لحالة العنصر",
+  "misleading_description": "وصف مضلل لحالة المنتج",
   "fraud_suspicious_activity": "احتيال أو نشاط مشبوه",
   "incorrect_info": "معلومات غير صحيحة عن الحجم أو اللون أو غيرها",
   "blurry_photos": "صور ضبابية أو ذات جودة رديئة",
@@ -188,24 +188,24 @@
     "cookies_title": "4. الكوكيز:",
     "cookies_content": "يستخدم الموقع ملفات تعريف الارتباط لتمييز المستخدمين / الزوار عن المستخدمين الآخرين للموقع لمساعدة شوب<span class=\"color\">ين</span> في تحسين تجربتهم أثناء تصفح الموقع.",
     "articles_for_sale_title": "5. المقالات للبيع:",
-    "articles_for_sale_content": "يتعهد البائع/البائعة بضمان أن أي عنصر معروض للبيع خالٍ من العيوب (بقع، ثقوب أو تمزقات...). يحق للمشتري/المشتريّة الذي يتلقى منتجًا في هذه الحالة إرجاعه. يُحظر إعادة بيع المنتجات المقلدة أو المحظورة من قبل القانون. يتعهد البائع/البائعة بتوفير صور حقيقية للمنتج المعروض للبيع. يجب أن تتطابق وصف المنتج مع خصائصه الفعلية. لشركة شوب<span class=\"color\">إن</span> كامل الحق في طلب من البائع/البائعة تغيير أو حذف الإعلان أو إخباره بأن شوب<span class=\"color\">إن</span> ستقوم بذلك مباشرة في حالة حدوث خطأ (مثال: خطأ في الفئة).",
+    "articles_for_sale_content": "يتعهد البائع/البائعة بضمان أن أي منتج معروض للبيع خالٍ من العيوب (بقع، ثقوب أو تمزقات...). يحق للمشتري/المشتريّة الذي يتلقى منتجًا في هذه الحالة إرجاعه. يُحظر إعادة بيع المنتجات المقلدة أو المحظورة من قبل القانون. يتعهد البائع/البائعة بتوفير صور حقيقية للمنتج المعروض للبيع. يجب أن تتطابق وصف المنتج مع خصائصه الفعلية. لشركة شوب<span class=\"color\">إن</span> كامل الحق في طلب من البائع/البائعة تغيير أو حذف الإعلان أو إخباره بأن شوب<span class=\"color\">إن</span> ستقوم بذلك مباشرة في حالة حدوث خطأ (مثال: خطأ في الفئة).",
 
     "return_title": "6. الإرجاع:",
     "return_content": "في حالة فشل التسليم يجب أن يكون البائع/البائعة متاحًا لاستلام المنتج المرتجع.",
     "luxury_title": "7. شوب<span class=\"color\">ين</span> Luxury:",
-    "luxury_description": "يجب أن يتجاوز العنصر الذي ينتمي إلى فئة شوب<span class=\"color\">ين</span> LUXURY :",
+    "luxury_description": "يجب أن يتجاوز المنتج الذي ينتمي إلى فئة شوب<span class=\"color\">ين</span> LUXURY :",
     "luxury_price_condition": "أكثر من 800",
-    "luxury_authentication_condition": "يجب أن يتم التحقق من صحة العنصر قبل تسليمه للمشتري",
+    "luxury_authentication_condition": "يجب أن يتم التحقق من صحة المنتج قبل تسليمه للمشتري",
     "luxury_category_condition": "سيتم:",
     "luxury_symbol_authentication": "التحقق من صحته بواسطة رمز",
-    "luxury_sale_steps": "خطوات بيع عنصر ينتمي إلى فئة شوب<span class=\"color\">ين</span> LUXURY:",
-    "luxury_publish_item": "نشر العنصر الفاخر للبيع",
+    "luxury_sale_steps": "خطوات بيع منتج ينتمي إلى فئة شوب<span class=\"color\">ين</span> LUXURY:",
+    "luxury_publish_item": "نشر المنتج الفاخر للبيع",
     "luxury_purchase_confirmation": "بعد تأكيد الشراء، سيقوم فريقنا بإبلاغك بالبيع وسيتم تحديد موعد للاستلام",
-    "luxury_item_authentication": "سيتم التحقق من صحة العنصر من قبل فريقنا",
-    "luxury_item_delivery": "إذا كان العنصر أصليًا، سيتم تسليمه خلال 3 أيام",
-    "luxury_payment_confirmation": "بعد استلام العنصر من المشتري/المشتريّة، سيتم تحويل الدفع إلى حسابك خلال 24 ساعة",
+    "luxury_item_authentication": "سيتم التحقق من صحة المنتج من قبل فريقنا",
+    "luxury_item_delivery": "إذا كان المنتج أصليًا، سيتم تسليمه خلال 3 أيام",
+    "luxury_payment_confirmation": "بعد استلام المنتج من المشتري/المشتريّة، سيتم تحويل الدفع إلى حسابك خلال 24 ساعة",
     "luxury_return_policy": "سياسة الإرجاع لمنتجات فئة شوب<span class=\"color\">ين</span> LUXURY:",
-    "luxury_authentication_policy": "تتمسك شوب<span class=\"color\">ين</span> بسياسة صارمة ضد المنتجات المقلدة. إذا استلمنا منتجات مزيفة أو عناصر معيبة أو نسخ غير قانونية (مستنسخة أو مصنعة بشكل غير قانوني) أو أي منتج ينتهك حقوق الملكية الفكرية، سيتصل فريقنا بالبائع عبر البريد الإلكتروني أو الهاتف لإبلاغه بإرجاع العنصر، مع تقديم أدلة قاطعة على التزوير، وسيتم إلغاء الطلب. سيتم إزالة العنصر بشكل دائم من كتالوج شوب<span class=\"color\">ين</span>. سيتم تحميل البائع / البائعة تكاليف العودة والتوثيق التي تبلغ 120 درهمًا. سيتم تسجيل معلومات البائع / البائعة ومنعه من بيع المنتجات المقلدة مستقبلاً. لتجنب أي إزعاج، يجب على البائع تقديم مستندات أصلية وغير معدلة مثل شهادة التوثيق، الفاتورة أو علامة السعر. يتم تشجيع المشتريات على قراءة الوصف الكامل للعنصر بعناية وطلب في قسم التعليقات إذا كان العنصر أصليًا أم نسخة.",
+    "luxury_authentication_policy": "تتمسك شوب<span class=\"color\">ين</span> بسياسة صارمة ضد المنتجات المقلدة. إذا استلمنا منتجات مزيفة أو عناصر معيبة أو نسخ غير قانونية (مستنسخة أو مصنعة بشكل غير قانوني) أو أي منتج ينتهك حقوق الملكية الفكرية، سيتصل فريقنا بالبائع عبر البريد الإلكتروني أو الهاتف لإبلاغه بإرجاع المنتج، مع تقديم أدلة قاطعة على التزوير، وسيتم إلغاء الطلب. سيتم إزالة المنتج بشكل دائم من كتالوج شوب<span class=\"color\">ين</span>. سيتم تحميل البائع / البائعة تكاليف العودة والتوثيق التي تبلغ 120 درهمًا. سيتم تسجيل معلومات البائع / البائعة ومنعه من بيع المنتجات المقلدة مستقبلاً. لتجنب أي إزعاج، يجب على البائع تقديم مستندات أصلية وغير معدلة مثل شهادة التوثيق، الفاتورة أو علامة السعر. يتم تشجيع المشتريات على قراءة الوصف الكامل للمنتج بعناية وطلب في قسم التعليقات إذا كان المنتج أصليًا أم نسخة.",
      "Mode voyage": "وضع السفر",
      "keyword": "الكلمة المفتاحية",
      "status": "الحالة",
@@ -243,7 +243,7 @@
     "ad_status": "حالة الإعلان",
     "deletion_reason": "سبب الحذف من قبل شوبإن",
     "deleted_by_shopin": "تم الحذف من قبل شوبإن",
-    "no_items_found": "لم يتم العثور على أي عنصر وفقًا لمعايير البحث هذه.",
+    "no_items_found": "لم يتم العثور على أي منتج وفقًا لمعايير البحث هذه.",
     "reduce_price": "خفض السعر",
   "current_price": "السعر الحالي",
   "shopin_percentage": "نسبة شوب<span class=\"color\">ين</span>",
@@ -305,7 +305,7 @@
   "added_on": "تمت الإضافة في",
   "no_favorites": "ليس لديك أي مفضلات بعد",
   "favorite_removed": "تمت إزالة المنتج من المفضل",
-  "favorite_added": "تمت إضافة العنصر إلى المفضلة",
+  "favorite_added": "تمت إضافة المنتج إلى المفضلة",
   "remove_all": "حذف الكل",
   "notifications.new_order_title": "طلب جديد!",
   "notifications.new_order_message": ":salutation :seller، تم طلب منتجك <a href=':post_url' class='underlined-link'>:post_title</a> من قبل :buyer. يرجى تحضير المنتج للشحن. سيتواصل معك أحد مندوبي الشحن التابعين لنا قريبًا لاستلام المنتج.<br>يرجى <a href=':bank_info_url' class='underlined-link'>النقر هنا</a> لتأكيد أو تحديث معلوماتك البنكية (RIB)، حتى نتمكن من تحويل الأموال لك عند اكتمال عملية البيع.",
@@ -315,7 +315,7 @@
   "message.ad_disliked": "تم إلغاء الإعجاب بالإعلان",
   "message.ad_liked": "تم الإعجاب بالإعلان",
   "about.shopin": "حول شوب<span class=\"color\">ين</span>",
-  "welcome.shopin": "مرحبًا بك في عالم شوب<span class=\"color\">ين</span>، المنصة التي تُغير عاداتك في الشراء والبيع. هنا، كل عنصر يروي قصة، وكل عملية شراء تُعد فرصة للمشاركة في حركة عصرية ومسؤولة.",
+  "welcome.shopin": "مرحبًا بك في عالم شوب<span class=\"color\">ين</span>، المنصة التي تُغير عاداتك في الشراء والبيع. هنا، كل منتج يروي قصة، وكل عملية شراء تُعد فرصة للمشاركة في حركة عصرية ومسؤولة.",
   "why.shopin": "لماذا تختار شوب<span class=\"color\">ين</span>؟ لأننا لسنا مجرد سوق إلكتروني، بل نحن مجتمع يقدّر احتياجاتك، ورغباتك، وتأثيرك. استكشف مجموعة متنوعة من المنتجات الجديدة والمستعملة، واكتشف قطعًا نادرة، وبِع أغراضك بكل سهولة.",
   "join.shopin": "بانضمامك إلى شوب<span class=\"color\">ين</span>، فإنك تتبنى أسلوب استهلاك أذكى وأكثر استدامة. تساهم في تقليل الهدر مع اكتشاف كنوز فريدة تعبّر عن ذوقك وقيمك.",
   "call.to.action": "لا تترك أغراضك غير المستعملة مكدسة في منزلك — حوّلها إلى دخل. وللباحثين عن الصفقات الرائعة، اكتشافك المفضل التالي ينتظرك بالفعل على شوب<span class=\"color\">ين</span>. انضم إلينا اليوم وكن <span class='color'>شوبينر</span>، وكن جزءًا من تغيير إيجابي وعملي ومفيد!",
@@ -447,7 +447,7 @@
 "password_regex": "يجب أن تحتوي كلمة المرور على حرف كبير واحد، حرف صغير واحد، رقم، ورمز خاص (-!@# إلخ)",
 "password_updated_successfully": "لقد تم تحديث كلمة المرور الخاصة بك بنجاح",
 "price_update_success": "تم تحديث السعر بنجاح.",
-    "price_reduction_success2": "تم قبول السعر الجديد :price درهم. <br/> يمكنك تقليل سعر هذا العنصر مرة أخرى في 6 أيام 23 ساعة و 59 دقيقة.",
+    "price_reduction_success2": "تم قبول السعر الجديد :price درهم. <br/> يمكنك تقليل سعر هذا المنتج مرة أخرى في 6 أيام 23 ساعة و 59 دقيقة.",
     "prix.required": "السعر مطلوب",
     "prix.numeric": "يجب أن يكون السعر رقماً",
     "prix.min": "يجب أن يكون السعر أكبر من 1 درهم",
@@ -474,7 +474,75 @@
     "shipment_status.delayed": "تأخرت الشحنة",
     "shipment_status.returned": "تم إرجاع الشحنة إلى المرسل",
     "shipment_status.not_delivered": "لم يتم التسليم",
-    "shipment_status.unknown": "حالة غير معروفة"
+    "shipment_status.unknown": "حالة غير معروفة",
+    "required2": "يرجى ملء جميع الحقول المطلوبة",
+    "publish_warning": "يرجى ملء جميع الحقول المطلوبة قبل النشر",
+    "min_photos": "يجب عليك إضافة 3 صور على الأقل",
+    "Marque": "الماركة",
+    "Couleur": "اللون",
+    "Eventuels défauts": "العيوب المحتملة",
+    "Taille": "المقاس",
+    "Article pour": "منتج لـ",
+    "Matière": "المادة",
+    "Matière de chaussures": "مادة الحذاء",
+    "Hauteur du talon (cm)": "ارتفاع الكعب (سم)",
+    "Pointure Enfant": "مقاس حذاء الطفل",
+    "Pointure": "مقاس الحذاء",
+    "Pointure Bébé": "مقاس حذاء الرضيع",
+    "Mesures / Dimensions": "القياسات / الأبعاد",
+    "Taille Bébé": "مقاس الرضيع",
+    "Taille Enfant": "مقاس الطفل",
+    "Type de calculatrice": "نوع الآلة الحاسبة",
+    "Nom et/ nombre du modèle": "اسم/رقم الموديل",
+    "Langue": "اللغة",
+    "Nombre de volume": "عدد المجلدات",
+    "Édition": "الإصدار",
+    "Année d'édition": "سنة النشر",
+    "Nombre de pages": "عدد الصفحات",
+    "Auteur": "المؤلف",
+    "Couverture": "الغلاف",
+    "Âge recommandé": "العمر الموصى به",
+    "Niveau Scolaire": "المستوى الدراسي",
+    "Femme": "للنساء",
+  "Homme": "للرجال",
+  "Unisex": "للنساء والرجال",
+  "Coton": "قطن",
+  "Cuir": "جلد",
+  "Daim": "شامواه",
+  "Lin": "كتان",
+  "Nylon": "نايلون",
+  "Paille": "قش",
+  "Polyester": "بوليستر",
+  "Simili cuir": "جلد صناعي",
+  "Suède": "شامواه",
+  "Tissu": "قماش",
+  "Toile": "توائل",
+  "Velours": "مخمل",
+  "Vinyle": "فينيل",
+  "Caoutchouc": "مطاط",
+  "Mousseline": "شيفون",
+  "Satin": "ساتان",
+  "Prématurés": "خُدّج",
+  "0-1 mois": "0-1 شهر",
+  "1-2 mois": "1-2 شهر",
+  "2-3 mois": "2-3 شهر",
+  "4-6 mois": "4-6 أشهر",
+  "7-9 mois": "7-9 أشهر",
+  "10-12 mois": "10-12 أشهر",
+  "1-2 ans": "1-2 سنة",
+  "Arabe": "العربية",
+  "Français": "الفرنسية",
+  "Anglais": "الإنجليزية",
+  "Espagnol": "الإسبانية",
+  "Allemand": "الألمانية",
+  "Italien": "الإيطالية",
+  "Livre de poche": "كتاب جيب",
+  "Couverture rigide": "غلاف صلب",
+  "0-2 ans": "0-2 سنة",
+  "3-5 ans": "3-5 سنوات",
+  "6-8 ans": "6-8 سنوات",
+  "9-12 ans": "9-12 سنة",
+  "13+": "13 سنة فما فوق"
 
 
 
