--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -473,7 +473,76 @@
     "shipment_status.delayed": "Delayed",
     "shipment_status.returned": "Returned to Sender",
     "shipment_status.not_delivered": "Not Delivered",
-    "shipment_status.unknown": "Unknown Status"
+    "shipment_status.unknown": "Unknown Status",
+    "required2": "Please fill in all required fields",
+    "publish_warning": "Please fill in all required fields before posting!",
+    "min_photos": "You must add at least 3 photos!",
+    "Marque": "Brand",
+    "Couleur": "Color",
+    "Eventuels défauts": "Possible defects",
+    "Taille": "Size",
+    "Article pour": "Item for",
+    "Matière": "Material",
+    "Matière de chaussures": "Shoe material",
+    "Hauteur du talon (cm)": "Heel height (cm)",
+    "Pointure Enfant": "Child shoe size",
+    "Pointure": "Shoe size",
+    "Pointure Bébé": "Baby shoe size",
+    "Mesures / Dimensions": "Measurements / Dimensions",
+    "Taille Bébé": "Baby size",
+    "Taille Enfant": "Child size",
+    "Type de calculatrice": "Calculator type",
+    "Nom et/ nombre du modèle": "Model name/number",
+    "Langue": "Language",
+    "Nombre de volume": "Number of volumes",
+    "Édition": "Edition",
+    "Année d'édition": "Publication year",
+    "Nombre de pages": "Number of pages",
+    "Auteur": "Author",
+    "Couverture": "Cover",
+    "Âge recommandé": "Recommended age",
+    "Niveau Scolaire": "School level",
+    "Femme": "Woman",
+  "Homme": "Man",
+  "Unisex": "Unisex",
+  "Coton": "Cotton",
+  "Cuir": "Leather",
+  "Daim": "Suede",
+  "Lin": "Linen",
+  "Nylon": "Nylon",
+  "Paille": "Straw",
+  "Polyester": "Polyester",
+  "Simili cuir": "Faux leather",
+  "Suède": "Suede",
+  "Tissu": "Fabric",
+  "Toile": "Canvas",
+  "Velours": "Velvet",
+  "Vinyle": "Vinyl",
+  "Caoutchouc": "Rubber",
+  "Mousseline": "Chiffon",
+  "Satin": "Satin",
+  "Prématurés": "Premature",
+  "0-1 mois": "0-1 month",
+  "1-2 mois": "1-2 months",
+  "2-3 mois": "2-3 months",
+  "4-6 mois": "4-6 months",
+  "7-9 mois": "7-9 months",
+  "10-12 mois": "10-12 months",
+  "1-2 ans": "1-2 years",
+  "Arabe": "Arabic",
+  "Français": "French",
+  "Anglais": "English",
+  "Espagnol": "Spanish",
+  "Allemand": "German",
+  "Italien": "Italian",
+  "Livre de poche": "Paperback",
+  "Couverture rigide": "Hardcover",
+  "0-2 ans": "0-2 years",
+  "3-5 ans": "3-5 years",
+  "6-8 ans": "6-8 years",
+  "9-12 ans": "9-12 years",
+  "13+": "13+"
+
 
 
 
