--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -475,7 +475,78 @@
     "shipment_status.delayed": "Retardé",
     "shipment_status.returned": "Retourné à l'expéditeur",
     "shipment_status.not_delivered": "Non livré",
-    "shipment_status.unknown": "Statut inconnu"
+    "shipment_status.unknown": "Statut inconnu",
+    "required2": "Veuillez remplir tous les champs obligatoires",
+    "publish_warning": "Veuillez remplir tous les champs obligatoires avant de publier!",
+    "min_photos": "Vous devez ajouter au moins 3 photos!",
+    "Marque": "Marque",
+    "Couleur": "Couleur",
+    "Eventuels défauts": "Éventuels défauts",
+    "Taille": "Taille",
+    "Article pour": "Article pour",
+    "Matière": "Matière",
+    "Matière de chaussures": "Matière de chaussures",
+    "Hauteur du talon (cm)": "Hauteur du talon (cm)",
+    "Pointure Enfant": "Pointure Enfant",
+    "Pointure": "Pointure",
+    "Pointure Bébé": "Pointure Bébé",
+    "Mesures / Dimensions": "Mesures / Dimensions",
+    "Taille Bébé": "Taille Bébé",
+    "Taille Enfant": "Taille Enfant",
+    "Type de calculatrice": "Type de calculatrice",
+    "Nom et/ nombre du modèle": "Nom et/ nombre du modèle",
+    "Langue": "Langue",
+    "Nombre de volume": "Nombre de volume",
+    "Édition": "Édition",
+    "Année d'édition": "Année d'édition",
+    "Nombre de pages": "Nombre de pages",
+    "Auteur": "Auteur",
+    "Couverture": "Couverture",
+    "Âge recommandé": "Âge recommandé",
+    "Niveau Scolaire": "Niveau Scolaire",
+    "Femme": "Femme",
+  "Homme": "Homme",
+  "Unisex": "Unisex",
+  "Coton": "Coton",
+  "Cuir": "Cuir",
+  "Daim": "Daim",
+  "Lin": "Lin",
+  "Nylon": "Nylon",
+  "Paille": "Paille",
+  "Polyester": "Polyester",
+  "Simili cuir": "Simili cuir",
+  "Suède": "Suède",
+  "Tissu": "Tissu",
+  "Toile": "Toile",
+  "Velours": "Velours",
+  "Vinyle": "Vinyle",
+  "Caoutchouc": "Caoutchouc",
+  "Mousseline": "Mousseline",
+  "Satin": "Satin",
+  "Prématurés": "Prématurés",
+  "0-1 mois": "0-1 mois",
+  "1-2 mois": "1-2 mois",
+  "2-3 mois": "2-3 mois",
+  "4-6 mois": "4-6 mois",
+  "7-9 mois": "7-9 mois",
+  "10-12 mois": "10-12 mois",
+  "1-2 ans": "1-2 ans",
+  "Arabe": "Arabe",
+  "Français": "Français",
+  "Anglais": "Anglais",
+  "Espagnol": "Espagnol",
+  "Allemand": "Allemand",
+  "Italien": "Italien",
+  "Livre de poche": "Livre de poche",
+  "Couverture rigide": "Couverture rigide",
+  "0-2 ans": "0-2 ans",
+  "3-5 ans": "3-5 ans",
+  "6-8 ans": "6-8 ans",
+  "9-12 ans": "9-12 ans",
+  "13+": "13+"
+
+
+
 
 
 
