change-pic-trans

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -389,7 +389,7 @@
 "download_image": "تحميل الصورة",
 "save": "حفظ",
 "update": "تحديث",
-"choose_images": "الرجاء اختيار صور للمنتج الخاص بك",
+"choose_images": "الرجاء اختيار صور للمنتج الخاص بك (الحد الأدنى 3 صور)",
 "add_more_details": "أضف المزيد من التفاصيل عن منتجك",
 "post_title": "عنوان المنتج",
 "price1": "سعر المنتج",
