--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -361,7 +361,7 @@
 "current_rib_number": "رقم RIB الحالي",
 "bank_name": "اسم البنك",
 "account_holder_name": "اسم صاحب الحساب",
-"cin_image": "صورة CIN (صورة عن بطاقة التسجيل)",
+"cin_image": "صورة عن بطاقة التسجيل",
 "save_bank_info_changes": "حفظ التغييرات على معلوماتي البنكية",
 "current_password": "كلمة المرور الحالية",
 "new_password": "كلمة المرور الجديدة",
