--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -362,7 +362,7 @@
 "current_rib_number": "Numéro de RIB actuel",
     "bank_name": "Nom de la banque",
     "account_holder_name": "Nom du titulaire",
-    "cin_image": "Image du CIN (Image de la carte d’immatriculation)",
+    "cin_image": "Image de la carte d’immatriculation",
     "save_bank_info_changes": "Sauvegarder les modifications de mes informations bancaires",
     "current_password": "Mot de passe actuel",
     "new_password": "Nouveau mot de passe",
