--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -502,8 +502,8 @@
     "Couverture": "Cover",
     "Âge recommandé": "Recommended age",
     "Niveau Scolaire": "School level",
-    "Femme": "Woman",
-  "Homme": "Man",
+    "Femme": "Women",
+  "Homme": "Men",
   "Unisex": "Unisex",
   "Coton": "Cotton",
   "Cuir": "Leather",
