fix-color-trans

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -542,7 +542,32 @@
   "3-5 ans": "3-5 سنوات",
   "6-8 ans": "6-8 سنوات",
   "9-12 ans": "9-12 سنة",
-  "13+": "13 سنة فما فوق"
+  "13+": "13 سنة فما فوق",
+    "Noir": "أسود",
+    "Blanc": "أبيض",
+    "Rouge": "أحمر",
+    "Bleu": "أزرق",
+    "Vert": "أخضر",
+    "Jaune": "أصفر",
+    "Rose": "وردي",
+    "Orange": "برتقالي",
+    "Violet": "بنفسجي",
+    "Marron": "بني",
+    "Gris": "رمادي",
+    "Multicolore": "متعدد الألوان",
+    "Beige": "بيج",
+    "Turquoise": "تركواز",
+    "Or": "ذهبي",
+    "Argent": "فضي",
+ "Nude": "لون البشرة",
+  "Bleu-vert": "أزرق مخضر",
+  "Taupe": "تاوب (رمادي بني)",
+  "Argenté": "فضي",
+  "Fushia": "فوشيا",
+  "Doré": "ذهبي",
+  "Corail": "مرجاني",
+  "Camel": "جملي",
+    "Bordeaux": "بوردو"
 
 
 
