update-txt-howtobuy

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -173,7 +173,7 @@
     "add_to_favorites_title": "أضف إلى مفضلتك بنقرة واحدة",
     "add_to_favorites_description": "هل وجدت منتجاً يعجبك؟ اضغط على القلب الصغير لإضافته مباشرة إلى قائمة المفضلة الخاصة بك ولا تفوت فرصة مشاهدة منتجك المفضل.",
     "validate_cart_title": "أتمم طلبك في لحظة",
-    "validate_cart_description": "وهكذا، أصبحت العملية سهلة للغاية والدفع عند التسليم.",
+    "validate_cart_description": "هل أنت مستعد للشراء؟ اضغط على \"تأكيد سلة المشتريات\". الأمر في غاية السهولة: يتم الدفع عند التسليم لضمان راحة بالك.",
     "receive_package_title": "استلم منتجك دون عناء",
     "receive_package_description": "بمجرد تأكيد طلبك، سيقوم أحد السائقين بتسليم المنتج مباشرة إلى باب منزلك. شوب<span class=\"color\">إن</span> يجعل التسوق أكثر راحة ومتعة!",
     "general_conditions_title": "الشروط العامة",
