--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -172,7 +172,7 @@
     "add_to_favorites_title": "Add to your favorites with one click",
     "add_to_favorites_description": "Found something you like? Tap the little heart to instantly add it to your favorites list and never lose sight of your gems.",
     "validate_cart_title": "Validate your cart in no time",
-    "validate_cart_description": "That's it, it's that simple, and the payment is made upon delivery.",
+    "validate_cart_description": "Ready to give in? Click on “Validate my cart”. It couldn’t be easier: payment is made upon delivery for guaranteed peace of mind.",
     "receive_package_title": "Receive your package effortlessly",
     "receive_package_description": "Once your order is confirmed, a delivery person will bring it directly to your door. SHOP<span class=\"color\">IN</span> makes your shopping as convenient as it is enjoyable!",
     "general_conditions_title": "General Conditions",
