--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -173,7 +173,7 @@
     "add_to_favorites_title": "Ajoutez vos favoris d’un simple clic",
     "add_to_favorites_description": "Repérez un article qui vous plaît ? Appuyez sur le petit cœur pour l’ajouter instantanément à votre liste de favoris et ne jamais perdre de vue vos pépites.",
     "validate_cart_title": "Validez votre panier en un rien de temps",
-    "validate_cart_description": "Et voilà, c’est aussi simple que ça et le paiement se fait à la livraison.",
+    "validate_cart_description": "Prêt à craquer ? Cliquez sur « Valider mon panier ». Rien de plus simple : le paiement s’effectue à la livraison, pour une tranquillité assurée.",
     "receive_package_title": "Recevez votre colis sans effort",
     "receive_package_description": "Une fois votre commande confirmée, un livreur se chargera de vous remettre votre colis directement chez vous. SHOP<span class=\"color\">IN</span> rend votre shopping aussi pratique que plaisant !",
     "general_conditions_title": "Conditions générales",
