voyage-mode-trans

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -609,7 +609,11 @@
   "validation.password.min": "يجب أن يحتوي كلمة المرور على 8 أحرف على الأقل.",
   "validation.password.confirmed": "كلمات المرور غير متطابقة. يرجى التحقق والمحاولة مرة أخرى.",
   "validation.password.regex": "يجب أن تحتوي كلمة المرور على حرف كبير وحرف صغير ورقم ورمز خاص واحد على الأقل (-!@# إلخ).",
-  "username_invalid": "يجب أن يحتوي اسم المستخدم على أحرف وأرقام ورموز خاصة فقط (-!@# وما إلى ذلك)."
+  "username_invalid": "يجب أن يحتوي اسم المستخدم على أحرف وأرقام ورموز خاصة فقط (-!@# وما إلى ذلك).",
+  "voyage.activated.title": "تم تفعيل وضع السفر",
+  "voyage.activated.description": "ستكون إعلاناتك غير مرئية مؤقتًا للمستخدمين الآخرين. ستظهر تلقائيًا عند إلغاء تفعيل هذا الوضع",
+  "voyage.deactivated.title": "لقد خرجت من وضع السفر",
+  "voyage.deactivated.description": "إعلاناتك مرئية مرة أخرى"
 
 
 
