--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -613,7 +613,12 @@
 "voyage.activated.title": "Travel mode activated",
   "voyage.activated.description": "Your items will be temporarily invisible to other users. They will reappear automatically when you deactivate this mode.",
   "voyage.deactivated.title": "You have exited Travel Mode",
-  "voyage.deactivated.description": "Your items are visible again."
+  "voyage.deactivated.description": "Your items are visible again.",
+  "Membre depuis le": "Member since",
+    "Noter le SHOP": "Rate the SHOP<span class=\"color strong\">IN</span>ER",
+      "Noter le SHOP<span class=\"color strong\">IN</span>ER": "قيّم المتجر<span class=\"color strong\">IN</span>ER"
+
+
 
 
 
