--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -616,8 +616,9 @@
   "voyage.deactivated.description": "Your items are visible again.",
   "Membre depuis le": "Member since",
     "Noter le SHOP": "Rate the SHOP<span class=\"color strong\">IN</span>ER",
-      "Noter le SHOP<span class=\"color strong\">IN</span>ER": "قيّم المتجر<span class=\"color strong\">IN</span>ER"
-
+  "Votre publication est en cours de validation": "Your post is being reviewed",
+  "Vous recevrez une notification une fois qu'elle sera approuvée.": "You will receive a notification once it is approved.",
+  "Fermer": "Close"
 
 
 
