--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -618,7 +618,9 @@
      "Noter le SHOP": "قيّم الشوب<span class=\"color strong\">ين</span>ر",
      "Votre publication est en cours de validation": "يتم حاليًا مراجعة منشورك",
   "Vous recevrez une notification une fois qu'elle sera approuvée.": "ستتلقى إشعارًا بمجرد الموافقة عليه",
-  "Fermer": "إغلاق"
+  "Fermer": "إغلاق",
+    "Publier": "نشر"
+
 
 
 
