--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -618,7 +618,8 @@
     "Noter le SHOP": "Rate the SHOP<span class=\"color strong\">IN</span>ER",
   "Votre publication est en cours de validation": "Your post is being reviewed",
   "Vous recevrez une notification une fois qu'elle sera approuvée.": "You will receive a notification once it is approved.",
-  "Fermer": "Close"
+  "Fermer": "Close",
+  "Publier": "Publish"
 
 
 
