--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -620,7 +620,9 @@
 "Noter le SHOP": "Noter le SHOP<span class=\"color strong\">IN</span>ER",
 "Votre publication est en cours de validation": "Votre publication est en cours de validation",
   "Vous recevrez une notification une fois qu'elle sera approuvée.": "Vous recevrez une notification une fois qu'elle sera approuvée.",
-  "Fermer": "Fermer"
+  "Fermer": "Fermer",
+    "Publier": "Publier"
+
 
 
 
